# toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  fake.md  pyproject.toml  pyrightconfig.json  setup-links.sh
.bot/toolkit/: config.json  system_prompt.md
docs/: PROMPTS.md  SEARCH_TOOLS_PLAN.md  TODO.md  TOOL_CREATION_GUIDE.md  TOOL_GENERATION.md
templates/: bin_launcher.sh.template  man.template
tests/: test_echo.py  test_gpt.py
tools/android/: README.md  android_backup.md  android_backup.py  tools.toml
tools/browser/: README.md  browser.md  browser.py  tools.toml
tools/document/: README.md  docx2md.1  docx2md.md  docx2md.py  html2text.md  html2text.py  md2pdf.md  md2pdf.py  pdf2md.md  pdf2md.py  tools.toml
tools/email/: README.md  html2text.1  html2text.md  html2text.py  protonmail.1  protonmail.md  protonmail.py  tools.toml
tools/gpt/: README.md  gpt.1  gpt.md  gpt.py  tools.toml
tools/mdscraper/: .mdscraper  README.md  mdscraper.md  mdscraper.py  tools.toml
tools/my-echo/: my-echo.1  my-echo.py  tools.toml
tools/search/: README.md  docx_extractor.md  docx_extractor.py  pdf_extractor.md  pdf_extractor.py  search.md  search.py  text_extractor.md  text_extractor.py  tools.toml
tools/system/: IMPLEMENTATION_PLAN.md  PLANNING.md  README.md  SCHEDULE.md  backup-collect.py  backup-external.py  backup-restore.py  backup.py  backup_collect.md  backup_collect.py  backup_external.py  backup_restore.py  schedule.py  test_schedule.py  tools.toml
tools/toolkit/: README.md  toolkit.1  toolkit.md  toolkit.py  tools.toml
(+14 files in other folders)
