[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolkit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.28.0",
  "beautifulsoup4>=4.11.0",
  "openai>=1.6.0",
  "toml>=0.10.2",
  "pyyaml>=6.0.0",
  "watchdog>=3.0.0",
  "tantivy>=0.22.0",
  "pymupdf>=1.24.11",
  "pytest>=7.0.0",
  "ruff>=0.11.4",
  "mdformat>=0.7.17",
  "browser-use>=0.1.41",
  "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project.scripts]
# Document conversion tools
docx2md = "tools.document.docx2md:main"
pdf2md = "tools.document.pdf2md:main"
html2text = "tools.document.html2text:main"
md2pdf = "tools.document.md2pdf:main"

# Search and indexing tools
search = "tools.search.search:main"
text-extractor = "tools.search.text_extractor:main"
pdf-extractor = "tools.search.pdf_extractor:main"
docx-extractor = "tools.search.docx_extractor:main"

# AI and automation tools
gpt = "tools.gpt.gpt:main"
browser = "tools.browser.browser:main"
mdscraper = "tools.mdscraper.mdscraper:main"

# Email tools
protonmail = "tools.email.protonmail:main"

# System tools
backup = "tools.system.backup:main"
backup-collect = "tools.system.backup_collect:main"
backup-external = "tools.system.backup_external:main"
backup-restore = "tools.system.backup_restore:main"

# Android tools
android-backup = "tools.android.android_backup:main"

# Toolkit management
toolkit = "tools.toolkit.toolkit:main"
